@@ -269,6 +269,7 @@ void process_fx(struct context_data *ctx, struct channel_data *xc, int chn,
 			xc->pan.val = fxp;
 			xc->pan.surround = 0;
 		}
+		xc->rpv = 0;	/* storlek_20: set pan overrides random pan */
 		break;
 	case FX_OFFSET:		/* Set sample offset */
 		EFFECT_MEMORY(fxp, xc->offset.memory);
