@@ -17,6 +17,7 @@ Stable versions
 	- fix S3M/IT special marker handling (reported by knight-ryu12)
 	- fix Galaxy Music System 4.0 song length (reported by AntonZab)
 	- fix tone portamento memory without note (reported by NoSuck)
+	- fix IT pan swing limits
 	- Add TrackerPacker v1 format converter
 	- Add TrackerPacker v2 format converter
 	- Add ProPacker 1.0 format converter
